--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "bcrypt": "^5.1.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "express-async-errors": "^3.1.1"
+    "express-async-errors": "^3.1.1",
+    "jsonwebtoken": "^9.0.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.1",
